corrected accessibility issues and wrapped all the content inside a main tag instead of a div container

--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,14 @@ body {
   box-sizing: border-box;
   background: #0d192b;
   font-family: "Outfit", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 p {
   font-size: 18px;
-}
-
-.container {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .card {
@@ -88,7 +85,11 @@ p {
   color: white;
 }
 
-.creator span:hover {
+.creator .creator-name {
+  color: white;
+}
+
+.creator .creator-name:hover {
   color: #00fff7;
   cursor: pointer;
 }
@@ -103,6 +104,7 @@ hr {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .eth {
@@ -123,11 +125,16 @@ hr {
   color: #8bacda;
 }
 
-.card h3 {
+.card a {
+  text-decoration: none;
+}
+
+.card .title {
+  font-size: 1.5rem;
   color: white;
 }
 
-.card h3:hover {
+.card .title:hover {
   color: #00fff7;
   cursor: pointer;
 }
